# src/Applications.WebHost/ClientApp/types/api.ts
@@ -1,0 +1,153 @@
+/* tslint:disable */
+/* eslint-disable */
+//----------------------
+// <auto-generated>
+//     Generated using the NSwag toolchain v13.7.0.0 (NJsonSchema v10.1.24.0 (Newtonsoft.Json v12.0.0.0)) (http://NSwag.org)
+// </auto-generated>
+//----------------------
+// ReSharper disable InconsistentNaming
+
+/** アプリケーションのバージョンを表します。 */
+export interface AppVersion {
+  /** API バージョンを取得または設定します。 */
+  apiVersion: string | null;
+  /** SPA バージョンを取得または設定します。 */
+  spaVersion: string | null;
+}
+
+/** ページングされたコレクション情報を表します。 */
+export interface IPaginationOfUser {
+  /** 1 から始まる現在のページインデックスを取得します。 */
+  currentPageIndex: number;
+  /** 現在のページの要素のコレクションを取得します。 */
+  currentPageItems: User[] | null;
+  /** 現在のページングサイズを取得します。 */
+  currentPageSize: number;
+  /** 要素数を取得します。 */
+  totalItemCount: number;
+  /** ページ数を取得します。 */
+  totalPageCount: number;
+}
+
+/** ユーザーを表します。 */
+export interface User {
+  /** ユーザー ID を取得します。 */
+  id: number | null;
+  /** ユーザー名を取得します。 */
+  name: string | null;
+  /** プロフィールを取得します。 */
+  profile: UserProfile | null;
+  /** ロールのコレクションを取得します。 */
+  roles: UserRole[] | null;
+}
+
+/** ユーザーのプロフィールを表します。 */
+export interface UserProfile {
+  /** メールアドレスを取得します。 */
+  emailAddress: string | null;
+  /** 生年月日を取得します。 */
+  birthday: Date | null;
+  /** 性別を取得します。 */
+  gender: Gender | null;
+}
+
+/** 性別を表します。 */
+export enum Gender {
+  None = 0,
+  Male = 1,
+  Female = 2,
+}
+
+/** ユーザーのロールを表します。 */
+export interface UserRole {
+  /** ロール ID を取得します。 */
+  roleId: number | null;
+}
+
+export interface Sorting {
+  /** 並び替え方向を取得または設定します。 */
+  sortDirection: SortDirection;
+  /** 並び替えのキーとなるプロパティの名前を取得または設定します。 */
+  sortPropertyName: string | null;
+}
+
+/** ソートの並び替え方向を表します。 */
+export enum SortDirection {
+  Ascending = 0,
+  Descending = 1,
+}
+
+/** ユーザーの更新情報を表します。 */
+export interface UserUpdateModel {
+  /** メールアドレスを取得または設定します。 */
+  emailAddress: string | null;
+  /** 生年月日を取得または設定します。 */
+  birthday: Date | null;
+  /** 性別を取得または設定します。 */
+  gender: Gender | null;
+  /** ロールのコレクションを取得または設定します。 */
+  roles: number[] | null;
+}
+
+/** ユーザーのパスワードの更新情報を表します。 */
+export interface UserUpdatePasswordModel {
+  /** 現在のパスワードを取得または設定します。 */
+  currentPassword: string | null;
+  /** 新しいパスワードを取得または設定します。 */
+  newPassword: string | null;
+}
+
+/** ユーザーの登録情報を表します。 */
+export interface UserCreateModel {
+  /** ユーザー名を取得または設定します。 */
+  userName: string | null;
+  /** パスワードを取得または設定します。 */
+  password: string | null;
+  /** メールアドレスを取得または設定します。 */
+  emailAddress: string | null;
+  /** 生年月日を取得または設定します。 */
+  birthday: Date | null;
+  /** 性別を取得または設定します。 */
+  gender: Gender | null;
+  /** ロールのコレクションを取得または設定します。 */
+  roles: number[] | null;
+}
+
+/** テキストと値のペアを表します。 */
+export interface TextValuePairOfInteger {
+  /** テキストを取得または設定します。 */
+  text: string | null;
+  /** 値を取得または設定します。 */
+  value: number;
+}
+
+/** 住所の情報を表します。 */
+export interface AddressModel {
+  /** 7 桁の郵便番号を取得または設定します。 */
+  postalCode: string | null;
+  /** 都道府県名、市区町村名、町域名を含む住所を取得または設定します。 */
+  address: string | null;
+}
+
+/** アカウントの情報を表します。 */
+export interface AccountIdentity {
+  /** ユーザー名を取得または設定します。 */
+  userName: string | null;
+  /** 権限を表す Permission 値をキーとしたコレクションを取得または設定します。 */
+  permissions: { [key: string]: boolean } | null;
+}
+
+/** 認証情報を表します。 */
+export interface Credentials {
+  /** ユーザー名を取得または設定します。 */
+  userName: string | null;
+  /** パスワードを取得または設定します。 */
+  password: string | null;
+}
+
+export interface FileResponse {
+  data: Blob;
+  status: number;
+  fileName?: string;
+  headers?: { [name: string]: any };
+}
