# src/Applications.WebHost/swagger.json
@@ -1,5 +1,5 @@
 {
-  "x-generator": "NSwag v13.6.2.0 (NJsonSchema v10.1.23.0 (Newtonsoft.Json v12.0.0.0))",
+  "x-generator": "NSwag v13.7.0.0 (NJsonSchema v10.1.24.0 (Newtonsoft.Json v12.0.0.0))",
   "openapi": "3.0.0",
   "info": {
     "title": "AspNetCoreNuxt.Applications.WebHost",
@@ -138,22 +138,17 @@
           {
             "name": "sort",
             "in": "query",
-            "description": "並び替え方向を取得または設定します。",
+            "style": "form",
+            "explode": true,
+            "description": "ソート条件を表す Sorting オブジェクトのコレクション。",
             "schema": {
-              "type": "string",
-              "nullable": true
+              "type": "array",
+              "nullable": true,
+              "items": {
+                "$ref": "#/components/schemas/Sorting"
+              }
             },
             "x-position": 6
-          },
-          {
-            "name": "sort-direction",
-            "in": "query",
-            "description": "並び替えのキーとなるプロパティの名前を取得または設定します。",
-            "schema": {
-              "type": "string",
-              "nullable": true
-            },
-            "x-position": 7
           },
           {
             "name": "index",
@@ -163,7 +158,7 @@
               "type": "string",
               "nullable": true
             },
-            "x-position": 8
+            "x-position": 7
           },
           {
             "name": "size",
@@ -173,7 +168,7 @@
               "type": "integer",
               "format": "int32"
             },
-            "x-position": 9
+            "x-position": 8
           },
           {
             "name": "fields",
@@ -188,7 +183,7 @@
                 "type": "string"
               }
             },
-            "x-position": 10
+            "x-position": 9
           }
         ],
         "responses": {
@@ -646,12 +641,12 @@
         }
       }
     },
-    "/api/addresses": {
+    "/api/addresses/{code}": {
       "get": {
         "tags": [
           "Addresses"
         ],
-        "summary": "指定された郵便番号に紐づく住所を非同期に取得します。",
+        "summary": "指定された郵便番号に紐づく住所の情報を非同期に取得します。",
         "description": "郵便番号データ配信サービス zip-cloud は CORS が許可されていないため API アクセスをプロキシします。",
         "operationId": "Addresses_Get",
         "parameters": [
@@ -662,7 +657,8 @@
           },
           {
             "name": "code",
-            "in": "query",
+            "in": "path",
+            "required": true,
             "description": "7 桁の郵便番号、もしくはハイフンを含む 8 桁の郵便番号。",
             "schema": {
               "type": "string",
@@ -673,12 +669,14 @@
         ],
         "responses": {
           "200": {
-            "description": "郵便番号に紐づく住所。",
+            "description": "住所の情報を表す AddressModel オブジェクトのコレクション。",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/AddressModel"
+                  }
                 }
               }
             }
@@ -930,6 +928,37 @@
           }
         }
       },
+      "Sorting": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "sortDirection": {
+            "description": "並び替え方向を取得または設定します。",
+            "oneOf": [
+              {
+                "$ref": "#/components/schemas/SortDirection"
+              }
+            ]
+          },
+          "sortPropertyName": {
+            "type": "string",
+            "description": "並び替えのキーとなるプロパティの名前を取得または設定します。",
+            "nullable": true
+          }
+        }
+      },
+      "SortDirection": {
+        "type": "integer",
+        "description": "ソートの並び替え方向を表します。",
+        "x-enumNames": [
+          "Ascending",
+          "Descending"
+        ],
+        "enum": [
+          0,
+          1
+        ]
+      },
       "UserUpdateModel": {
         "type": "object",
         "description": "ユーザーの更新情報を表します。",
@@ -1043,6 +1072,23 @@
             "type": "integer",
             "description": "値を取得または設定します。",
             "format": "int32"
+          }
+        }
+      },
+      "AddressModel": {
+        "type": "object",
+        "description": "住所の情報を表します。",
+        "additionalProperties": false,
+        "properties": {
+          "postalCode": {
+            "type": "string",
+            "description": "7 桁の郵便番号を取得または設定します。",
+            "nullable": true
+          },
+          "address": {
+            "type": "string",
+            "description": "都道府県名、市区町村名、町域名を含む住所を取得または設定します。",
+            "nullable": true
           }
         }
       },
