# src/Extensions.EntityFrameworkCore/SortingExtensions.cs
@@ -1,5 +1,7 @@
 using AspNetCoreNuxt.Extensions.Collections;
 using System;
+using System.Collections.Generic;
+using System.Linq;
 using System.Linq.Expressions;
 
 namespace AspNetCoreNuxt.Extensions.EntityFrameworkCore
@@ -15,13 +17,15 @@ namespace AspNetCoreNuxt.Extensions.EntityFrameworkCore
         /// </summary>
         /// <typeparam name="T">並び替えのキーとなるプロパティのトップレベルのオブジェクトの型。</typeparam>
         /// <param name="source"><see cref="ISorting"/> オブジェクト。</param>
-        /// <param name="defaultExpression">並び替えのキーとなるプロパティを示す式ツリー。</param>
-        /// <param name="defaultDirection">並び替え方向。</param>
+        /// <param name="defaults">既定のソート条件とする並び替えのキーとなるプロパティを示す式ツリーと並び替え方向のタプルのコレクション。</param>
         /// <returns><see cref="IQueryableSorting{T}"/> オブジェクト。</returns>
-        public static IQueryableSorting<T> ToQueryableOrDefault<T>(this ISorting source, Expression<Func<T, object>> defaultExpression, SortDirection defaultDirection)
+        public static IEnumerable<IQueryableSorting<T>> ToQueryableOrDefault<T>(this IEnumerable<ISorting> source, params (Expression<Func<T, object>> Expression, SortDirection Direction)[] defaults)
         {
-            var sorting = new QueryableSorting<T>(source.SortPropertyName, source.SortDirection);
-            return sorting.IsValid() ? sorting : new QueryableSorting<T>(defaultExpression, defaultDirection);
+            var sortings = source
+                .Select(x => new QueryableSorting<T>(x.SortPropertyName, x.SortDirection))
+                .Where(x => x.IsValid())
+                .ToArray();
+            return sortings.Any() ? sortings : defaults.Select(x => new QueryableSorting<T>(x.Expression, x.Direction)).ToArray();
         }
     }
 }
